--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <!-- //iconos bustrap -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
             <link rel="stylesheet" href="style.css">
-            <link rel="icon" type="imagen/png" href="imagenes/cronometro.png">
+            <link rel="icon" type="imagen/png" href="cronometro.png">
         </head>
         <body>
             <main class="contenedor-principal">
